Agregando pagina golosinas, y cargando productos

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li><a href="./page.productos/libreria.html">Libreria</a></li>
                 <li><a href="./page.productos/limpieza.html">Limpieza</a></li>
                 <li><a href="./page.productos/cigarrillos.html">Cigarrilos</a></li>
+                <li><a href="./page.productos/golosinas.html">Golosinas</a></li>
                 <li><a href="./page.productos/ofertas.html">Ofertas</a></li>
             </ul>
         </nav>
@@ -69,6 +70,26 @@
                 </div>
                 <div class="offer-item">
                     <img src="./galletitas.img/pituLimon.png" alt="Pitusas Limón">
+                    <p>Pitusas Limón - $200</p>
+                </div>
+                <div class="offer-item">
+                    <img src="./galletitas.img/pituChoco.png" alt="Pitusas Limón">
+                    <p>Pitusas Limón - $200</p>
+                </div>
+                <div class="offer-item">
+                    <img src="./galletitas.img/cocoParNor.webp" alt="Pitusas Limón">
+                    <p>Pitusas Limón - $200</p>
+                </div>
+                <div class="offer-item">
+                    <img src="./galletitas.img/pituLimon.png" alt="Pitusas Limón">
+                    <p>Pitusas Limón - $200</p>
+                </div>
+                <div class="offer-item">
+                    <img src="./galletitas.img/pituChoco.png" alt="Pitusas Limón">
+                    <p>Pitusas Limón - $200</p>
+                </div>
+                <div class="offer-item">
+                    <img src="./galletitas.img/cocoParNor.webp" alt="Pitusas Limón">
                     <p>Pitusas Limón - $200</p>
                 </div>
             </div>
