--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,7 +92,7 @@
             <div class="link">
                 <h3>Via dulce</h3>
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="#logo">Inicio</a></li>
                     <li><a href="#logo">Productos</a></li>
                     <li><a href="#logo">Contacto</a></li>
                 </ul>
