Agregamos productos, sumamos el link a todas las paginas

--- a/page.productos/cigarrillos.html
+++ b/page.productos/cigarrillos.html
@@ -29,6 +29,7 @@
                 <li><a href="./libreria.html">Libreria</a></li>
                 <li><a href="./limpieza.html">Limpieza</a></li>
                 <li><a href="./cigarrillos.html">Cigarrilos</a></li>
+                <li><a href="./golosinas.html">Golosinas</a></li>
                 <li><a href="./ofertas.html">Ofertas</a></li>
             </ul>
         </nav>
