--- a/page.productos/cigarrillos.html
+++ b/page.productos/cigarrillos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/cigarrilos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <title> Productos Cigarrillos </title>
 </head>
 <body>
@@ -19,6 +20,26 @@
             </nav>
         </div>
     </header>
+
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/ParNor.jpg" alt="Slide 1"></a>
+            </div>
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/takis.jpg" alt="Slide 2"></a>
+            </div>
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/fantoche.jpg" alt="Slide 3"></a>
+            </div>
+            <!-- Agrega más slides aquí -->
+        </div>
+        <!-- Botones de navegación -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <!-- Paginación -->
+        <div class="swiper-pagination"></div>
+    </div>
     <div class="products">
         <h2> Cigarrillos</h2>
         <nav class="listProduct">
@@ -49,6 +70,19 @@
     </div>
     <main class="boxContainer container">
     </main>
+
+    <div id="chatContainer" class="chat-box">
+        <div class="chat-header">
+            <h4>Chat de soporte</h4>
+            <button id="closeChat">✖</button>
+        </div>
+        <div id="chatMessages" class="chat-messages"></div>
+        <form id="chatForm" class="chat-form">
+            <input type="text" id="chatInput" placeholder="Escribe tu mensaje aquí..." />
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+    <button id="openChat" class="chat-button">💬 Chat</button>
 
     <footer class="footer">
         <div class="footerContent container">
@@ -81,5 +115,6 @@
 
 
     <script src="../js/cigarrilos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
