--- a/page.productos/golosinas.html
+++ b/page.productos/golosinas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/golosinas.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <title>Productos Golosinas</title>
 </head>
 <body>
@@ -33,6 +34,26 @@
         </div>
     </header>
 
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/ParNor.jpg" alt="Slide 1"></a>
+            </div>
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/takis.jpg" alt="Slide 2"></a>
+            </div>
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/fantoche.jpg" alt="Slide 3"></a>
+            </div>
+            <!-- Agrega más slides aquí -->
+        </div>
+        <!-- Botones de navegación -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <!-- Paginación -->
+        <div class="swiper-pagination"></div>
+    </div>
+
     <div class="products">
         <h2> Golosinas</h2>
         <nav class="listProduct">
@@ -47,11 +68,27 @@
                 <li><a href="./snack.html">Snack</a></li>
             </ul>
         </nav>
+
+        <h3>Buscador de Productos</h3>
+        <input type="text" id="searchInput" placeholder="Buscar productos...">
+        <div id="results"></div>
     </div>
 
     <main class="boxContainer container"> 
     </main>
-
+    
+    <div id="chatContainer" class="chat-box">
+        <div class="chat-header">
+            <h4>Chat de soporte</h4>
+            <button id="closeChat">✖</button>
+        </div>
+        <div id="chatMessages" class="chat-messages"></div>
+        <form id="chatForm" class="chat-form">
+            <input type="text" id="chatInput" placeholder="Escribe tu mensaje aquí..." />
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+    <button id="openChat" class="chat-button">💬 Chat</button>
     <footer class="footer">
         <div class="footerContent container">
             <div class="link">
@@ -81,5 +118,6 @@
         </div>
     </footer>
     <script src="../js/golosinas.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
