Creamos una page, con todos los productos, le pusimos un filtrador. Cargando productos en proseso

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <li><a href="./page.productos/limpieza.html">Limpieza</a></li>
                 <li><a href="./page.productos/ofertas.html">Ofertas</a></li>
                 <li><a href="./page.productos/snack.html">Snack</a></li>
+                <li><a href="./page.productos/todosLosProductos.html">Todos los productos</a></li>
             </ul>
         </nav>
         
@@ -75,6 +76,11 @@
                         <a href="./page.productos/ofertas.html"><img src="./image/takiBanner.png" alt="Slide 3"></a>
                         <h2>OFERTAS</h2>
                         <p>Los mas buscados, si sos fan del picante...</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="./page.productos/ofertas.html"><img src="./image/algoDulceBunner.png" alt="Slide 4"></a>
+                        <h2>OFERTAS</h2>
+                        <p>Lleva para compartir, se que le va a gustar..</p>
                     </div>
                     <!-- Agrega más slides aquí -->
                 </div>
