--- a/page.productos/almacen.html
+++ b/page.productos/almacen.html
@@ -45,6 +45,9 @@
             <div class="swiper-slide">
                 <a href="./ofertas.html"><img src="../image/takiBanner.png" alt="Slide 3"></a>
             </div>
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/algoDulceBunner.png" alt="Slide 4"></a>
+            </div>
             <!-- Agrega más slides aquí -->
         </div>
         <!-- Botones de navegación -->
@@ -66,6 +69,7 @@
                 <li><a href="./limpieza.html">Limpieza</a></li>
                 <li><a href="./ofertas.html">Ofertas</a></li>
                 <li><a href="./snack.html">Snack</a></li>
+                <li> <a href="./todosLosProductos.html">Todos los productos</a></li>
             </ul>
         </nav>
     </div>
