Creamos el filtro en almacen, galletitas, golosinas, limpieza y  snack

--- a/page.productos/almacen.html
+++ b/page.productos/almacen.html
@@ -71,6 +71,15 @@
                 <li><a href="./snack.html">Snack</a></li>
                 <li> <a href="./todosLosProductos.html">Todos los productos</a></li>
             </ul>
+
+            <div class="filtros">
+                <button id="filtro-todos" class="btn-filtro activo">Todos</button>
+                <button id="filtro-jugos" class="btn-filtro">Jugos</button>
+                <button id="filtro-yerbas" class="btn-filtro">Yerbas</button>
+                <button id="filtro-latex" class="btn-filtro">Latex</button>
+                <button id="filtro-cocina" class="btn-filtro">Cocina</button>
+                <button id="filtro-otros" class="btn-filtro">Otros</button>
+            </div>
         </nav>
     </div>
     <main class="boxContainer container">
