--- a/page.productos/galletitas.html
+++ b/page.productos/galletitas.html
@@ -58,6 +58,16 @@
                 <li><a href="./snack.html">Snack</a></li>
                 <li> <a href="./todosLosProductos.html">Todos los productos</a></li>
             </ul>
+
+            <div class="filtros">
+                <button id="filtro-todos" class="btn-filtro activo">Todos</button>
+                <button id="filtro-dulce" class="btn-filtro">Dulce</button>
+                <button id="filtro-salada" class="btn-filtro">Salada</button>
+                <button id="filtro-sinSal" class="btn-filtro">Sin sal</button>
+                <button id="filtro-trio" class="btn-filtro">Trio</button>
+                <button id="filtro-parNor" class="btn-filtro">ParNor/Fachitas</button>
+                <button id="filtro-otros" class="btn-filtro">Otros</button>
+            </div>
         </nav>
 
         <div class="carrito lateral">
