--- a/page.productos/golosinas.html
+++ b/page.productos/golosinas.html
@@ -71,6 +71,17 @@
                 <li><a href="./snack.html">Snack</a></li>
                 <li> <a href="./todosLosProductos.html">Todos los productos</a></li>
             </ul>
+
+            <div class="filtros">
+                <button id="filtro-todos" class="btn-filtro activo">Todos</button>
+                <button id="filtro-alfajores" class="btn-filtro">Alfajores</button>
+                <button id="filtro-gomitas" class="btn-filtro">Gomitas</button>
+                <button id="filtro-caramelos" class="btn-filtro">Caramelos</button>
+                <button id="filtro-chocolates" class="btn-filtro">Chocolates</button>
+                <button id="filtro-chiles-mentitas" class="btn-filtro">Chicles/Mentitas</button>
+                <button id="filtro-chupetines" class="btn-filtro">Chupetines</button>
+                <button id="filtro-otros" class="btn-filtro">Otros</button>
+            </div>
         </nav>
     </div>
 
