--- a/page.productos/limpieza.html
+++ b/page.productos/limpieza.html
@@ -71,7 +71,18 @@
                 <li><a href="./snack.html">Snack</a></li>
                 <li> <a href="./todosLosProductos.html">Todos los productos</a></li>
             </ul>
+
+            <div class="filtros">
+                <button id="filtro-todos" class="btn-filtro activo">Todos</button>
+                <button id="filtro-bolsas-papeles" class="btn-filtro">Bolsas/Papeles</button>
+                <button id="filtro-aerosol" class="btn-filtro">Aerosol</button>
+                <button id="filtro-higiene" class="btn-filtro">Higiene</button>
+                <button id="filtro-encendedores-pegamentos" class="btn-filtro">Encendedores/Pegamentos</button>
+                <button id="filtro-liquido" class="btn-filtro">Liquido</button>
+                <button id="filtro-otros" class="btn-filtro">Otros</button>
+            </div>
         </nav>
+        
     </div>
 
     <main class="boxContainer container"> 
