--- a/page.productos/snack.html
+++ b/page.productos/snack.html
@@ -57,6 +57,15 @@
                 <li><a href="./snack.html">Snack</a></li>
                 <li> <a href="./todosLosProductos.html">Todos los productos</a></li>
             </ul>
+
+            <div class="filtros">
+                <button id="filtro-todos" class="btn-filtro activo">Todos</button>
+                <button id="filtro-pepsico" class="btn-filtro">Pepsico</button>
+                <button id="filtro-krachitos" class="btn-filtro">Krachitos</button>
+                <button id="filtro-slices" class="btn-filtro">Slices</button>
+                <button id="filtro-burbujas" class="btn-filtro">Burbujas</button>
+                <button id="filtro-otros" class="btn-filtro">Otros</button>
+            </div>
         </nav>
 
         <div class="carrito lateral">
