Ya esta listo el stock, faltan ultimos detalles y la subimos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <spa class="texto">Bienvenido a nuesta tienda online</spa>
                 <h1>Todo lo que buscas </h1>
                 <p>
-                    Aca vas a encontrar productos seleccionados, ofertas diarias, nuevos ingresos y muchas cosas mas... ASI QUE ATENTOS!!!
+                    Aca vas a encontrar productos seleccionados, ofertas diarias, nuevos ingresos y muchas cosas mas...
                 </p>
                 <div class="butons">
                     <a href="./pages/contacto.html" class="btn1">Informacion</a>
