Precios, actualizacion de carrito

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,14 +26,13 @@
 
         <div class="headerContent container">
             <div class="headerTxt">
-                <spa class="texto">Bienvenido a nuesta contacto</spa>
-                <h1> Toda la informacion </h1>
+                <spa class="texto">Bienvenido a contactos</spa>
                 <p>
-                    Aca vas a encontrar nuestra ubicacion, Whatsapp, informacion sobre fechas especiales y mucho mas. 
+                    Vas a encontrar: Nuestra ubicación, Whatsapp, e información sobre fechas especiales. 
                 </p>
                 <div class="butons">
+                    <a href="#redes" class="btn1">Redes</a>
                     <a href="#contact" class="btn1">Ubicacion</a>
-                    <a href="../index.html" class="btn1">Inicio</a>
                 </div>
             </div>
 
@@ -49,7 +48,7 @@
         <img class="imgLocal" src="../image/Local.png" alt="Imagen de nuestro local la via dulce">
     </main> <!--Main Terminado-->
 
-    <section class="iconos">
+    <section id="redes" class="iconos">
         <h2 class="iconos-title">Contacta con Nosotros</h2>
         <div class="iconosDiv">
             <a href="https://www.facebook.com" target="_blank" class="icono facebook" aria-label="Facebook">
