Agregamos etiquetas meta, actualizamos paginas

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"><!-- Codificación de caracteres -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="description" content="Via Dulce es tu tienda en línea especializada en ofrecer los mejores precios mayoristas en productos de calidad. Con nuestro ecommerce, proporcionamos a nuestros clientes acceso directo a las ofertas más competitivas de la zona, permitiéndoles hacer compras de manera sencilla y rápida, garantizando siempre un servicio confiable y atención personalizada.">
+    <meta name="keywords" content="ofertas, productos, mayorista, primera marca, atencion, precios.">
+    <meta name="author" content="La via dulce">
+    <meta name="robots" content="index, follow"> <!-- Permite a los motores de búsqueda indexar la página -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <title>Via Dulce Online</title>
@@ -29,7 +33,7 @@
                 <spa class="texto">Bienvenido a nuesta tienda online</spa>
                 <h1>Tenemos todo lo que estás buscando.</h1>
                 <p>
-                    Vas a encontrar todos los productos seleccionados, ofertas diarias, y nuevos ingresos.
+                    Vamos a encontrar todas las novedades, ofertas diarias, productos seleccionados, nuevos ingresos, y mucho mas.
                 </p>
                 <div class="butons">
                     <a href="./pages/contacto.html" class="btn1">Informacion</a>
@@ -38,7 +42,7 @@
             </div>
 
             <div class="headerImg">
-                <img src="./image/Ofertas.jpg" alt="">
+                <img src="./image/Ofertas.jpg" alt="Imagen de productos">
             </div>
         </div>
     </header> <!--Header Terminado-->
@@ -53,7 +57,7 @@
                 <li><a href="./page.productos/golosinas.html">Golosinas</a></li>
                 <li><a href="./page.productos/limpieza.html">Libreria</a></li>
                 <li><a href="./page.productos/limpieza.html">Limpieza</a></li>
-                <li><a href="./page.productos/ofertas.html">Ofertas</a></li>
+                <li><a href="./page.productos/ofertas.html">Ofertas/Novedades</a></li>
                 <li><a href="./page.productos/snack.html">Snack</a></li>
             </ul>
         </nav>
@@ -63,22 +67,22 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a href="./page.productos/ofertas.html"><img src="./image/bannerRasta.png" alt="Slide 1"></a>
-                        <h2>OFERTAS</h2>
+                        <h2>Novedades</h2>
                         <p>Nuevo ingreso, ¡¡¡DALE QUE VUELAN!!!</p>
                     </div>
                     <div class="swiper-slide">
                         <a href="./page.productos/ofertas.html"><img src="./image/escolarBanner.png" alt="Slide 2"></a>
-                        <h2>OFERTAS</h2>
+                        <h2>Novedades</h2>
                         <p>Escolar por 60 unidades. ¿Te lo vas a perder?.</p>
                     </div>
                     <div class="swiper-slide">
                         <a href="./page.productos/ofertas.html"><img src="./image/takiBanner.png" alt="Slide 3"></a>
-                        <h2>OFERTAS</h2>
+                        <h2>Novedades</h2>
                         <p>Los mas buscados, si sos fan del picante...</p>
                     </div>
                     <div class="swiper-slide">
                         <a href="./page.productos/ofertas.html"><img src="./image/algoDulceBunner.png" alt="Slide 4"></a>
-                        <h2>OFERTAS</h2>
+                        <h2>Novedades</h2>
                         <p>Lleva para compartir, se que le va a gustar..</p>
                     </div>
                     <!-- Agrega más slides aquí -->
