--- a/page.productos/libreria.html
+++ b/page.productos/libreria.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="La via dulce">
+    <meta name="description" content="Pagina que contiene todos los productos de libreria.">
+    <meta name="keywords" content="Ofertas, libreria, novedades">
+    <meta name="author" content="La via dulce">
     <link rel="stylesheet" href="../css/libreria.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <title>Productos Libreria</title>
@@ -67,7 +70,7 @@
                 <li><a href="./golosinas.html">Golosinas</a></li>
                 <li><a href="./libreria.html">Libreria</a></li>
                 <li><a href="./limpieza.html">Limpieza</a></li>
-                <li><a href="./ofertas.html">Ofertas</a></li>
+                <li><a href="./ofertas.html">Ofertas/Novedades</a></li>
                 <li><a href="./snack.html">Snack</a></li>
             </ul>
         </nav>
