--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina que contiene toda la informacion sobre nosotros, ubicacion y contacto.">
+    <meta name="keywords" content="contacto, ubicacion, redes">
+    <meta name="author" content="La via dulce">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Contacto Via Dulce</title>
