--- a/page.productos/galletitas.html
+++ b/page.productos/galletitas.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina que contiene todos los productos de Galletitas.">
+    <meta name="keywords" content="Ofertas, galletitas, novedades">
+    <meta name="author" content="La via dulce">
     <title>Productos Galletitas</title>
     <link rel="stylesheet" href="../css/galletitas.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
@@ -54,7 +57,7 @@
                 <li><a href="./golosinas.html">Golosinas</a></li>
                 <li><a href="./libreria.html">Libreria</a></li>
                 <li><a href="./limpieza.html">Limpieza</a></li>
-                <li><a href="./ofertas.html">Ofertas</a></li>
+                <li><a href="./ofertas.html">Ofertas/Novedades</a></li>
                 <li><a href="./snack.html">Snack</a></li>
             </ul>
 
