Agregamos productos, ofertas, banner

--- a/page.productos/almacen.html
+++ b/page.productos/almacen.html
@@ -46,10 +46,13 @@
                 <a href="./ofertas.html"><img src="../image/escolarBanner.png" alt="Slide 2"></a>
             </div>
             <div class="swiper-slide">
-                <a href="./ofertas.html"><img src="../image/takiBanner.png" alt="Slide 3"></a>
+                <a href="./ofertas.html"><img src="../image/bunnerCarnaval.png" alt="Slide 3"></a>
             </div>
             <div class="swiper-slide">
                 <a href="./ofertas.html"><img src="../image/algoDulceBunner.png" alt="Slide 4"></a>
+            </div>
+            <div class="swiper-slide">
+                <a href="./ofertas.html"><img src="../image/bannerTNT.png" alt="Slide 4"></a>
             </div>
             <!-- Agrega más slides aquí -->
         </div>
