--- a/index.html
+++ b/index.html
@@ -76,14 +76,19 @@
                         <p>Escolar por 60 unidades. ¿Te lo vas a perder?.</p>
                     </div>
                     <div class="swiper-slide">
-                        <a href="./page.productos/ofertas.html"><img src="./image/takiBanner.png" alt="Slide 3"></a>
+                        <a href="./page.productos/ofertas.html"><img src="./image/bunnerCarnaval.png" alt="Slide 3"></a>
                         <h2>Novedades</h2>
-                        <p>Los mas buscados, si sos fan del picante...</p>
+                        <p>03, 04 de Marzo finde de carnaval, no te quedes sin espuma.</p>
                     </div>
                     <div class="swiper-slide">
                         <a href="./page.productos/ofertas.html"><img src="./image/algoDulceBunner.png" alt="Slide 4"></a>
                         <h2>Novedades</h2>
                         <p>Lleva para compartir, se que le va a gustar..</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="./page.productos/ofertas.html"><img src="./image/bannerTNT.png" alt="Slide 4"></a>
+                        <h2>Novedades</h2>
+                        <p>Volve loco a los chicos, con esta rica y muy acida golosina.</p>
                     </div>
                     <!-- Agrega más slides aquí -->
                 </div>
@@ -104,15 +109,15 @@
                     <img src="./snack.img/bastoncitosBots330gr.jpg" alt="Producto Especial 1">
                     <h3>Bastoncitos Bots</h3>
                     <p>Ventas.</p>
-                    <span class="price">$1.700,00</span>
+                    <span class="price">$1.708,00</span>
                     <a href="./page.productos/ofertas.html" class="buy-btn">Saber mas</a>
                 </div>
                 <!-- Producto 2 -->
                 <div class="product-card">
-                    <img src="./almacen.img/aceiteCañuelas.webp" alt="Producto Especial 2">
-                    <h3>Aceite Cañuelas</h3>
+                    <img src="./almacen.img/mayoNatura125g.jpg" alt="Producto Especial 2">
+                    <h3>Mayonesa Natura 125g</h3>
                     <p>Almacen.</p>
-                    <span class="price">$1.828,77</span>
+                    <span class="price">$526,00</span>
                     <a href="./page.productos/ofertas.html" class="buy-btn">Saber mas</a>
                 </div>
                 <!-- Producto 3 -->
@@ -120,14 +125,14 @@
                     <img src="./libreria.img/cartulinaBlanca.jpg" alt="Producto Especial 3">
                     <h3>Cartulina blanca</h3>
                     <p>Material escolar.</p>
-                    <span class="price">$200,00</span>
+                    <span class="price">$252,05</span>
                     <a href="./page.productos/ofertas.html" class="buy-btn">Saber mas</a>
                 </div><!-- Producto 4 -->
                 <div class="product-card">
                     <img src="./galletitas.img/gallMediaTardeTriple.jpg" alt="Producto Especial 4">
                     <h3>Media tarde</h3>
                     <p>Familiar.</p>
-                    <span class="price">$917.60</span>
+                    <span class="price">$927,90</span>
                     <a href="./page.productos/ofertas.html" class="buy-btn">Saber mas</a>
                 </div>
                 <!-- Producto 5 -->
