Agregamos productos,  modificamos js y productos

--- a/page.productos/ofertas.html
+++ b/page.productos/ofertas.html
@@ -60,7 +60,7 @@
                 <li><a href="./golosinas.html">Golosinas</a></li>
                 <li><a href="./libreria.html">Libreria</a></li>
                 <li><a href="./limpieza.html">Limpieza</a></li>
-                <li><a href="./ofertas.html">Ofertas</a></li>
+                <li><a href="./ofertas.html">Ofertas/Novedades</a></li>
                 <li><a href="./snack.html">Snack</a></li>
             </ul>
         </nav>
