nuevas opciones en la pagina contactos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,24 +54,41 @@
     <section id="redes" class="iconos">
         <h2 class="iconos-title">Contacta con Nosotros</h2>
         <div class="iconosDiv">
-            <a href="https://www.facebook.com" target="_blank" class="icono facebook" aria-label="Facebook">
+            <a href="https://www.facebook.com/profile.php?id=61550893478570" target="_blank" class="icono facebook" aria-label="Facebook" title="Síguenos en Facebook">
                 <span><i class="fab fa-facebook-f"></i></span>
                 <p>Facebook</p>
             </a>
-            <a href="https://www.instagram.com" target="_blank" class="icono instagram" aria-label="Instagram">
+            <a href="https://www.instagram.com/laviadulceonline/?hl=es" target="_blank" class="icono instagram" aria-label="Instagram" title="Síguenos en Instagram">
                 <span><i class="fab fa-instagram"></i></span>
                 <p>Instagram</p>
             </a>
-            <a href="https://wa.me/1165692697" target="_blank" class="icono whatsApp" aria-label="WhatsApp">
+            <a href="https://wa.me/1165692697" target="_blank" class="icono whatsApp" aria-label="WhatsApp" title="Chatea con nosotros en WhatsApp">
                 <span><i class="fab fa-whatsapp"></i></span>
                 <p>WhatsApp</p>
             </a>
-            <a href="https://maps.app.goo.gl/pKtBWrrvt7rp5DKr6"  target="_blank" class="icono googleMaps" aria-label="Ubicación">
+            <a href="https://maps.app.goo.gl/pKtBWrrvt7rp5DKr6" target="_blank" class="icono googleMaps" aria-label="Ubicación" title="Ver nuestra ubicación en Google Maps">
                 <span><i class="fas fa-map-marker-alt"></i></span>
                 <p>Ubicación</p>
             </a>
         </div>
     </section>
+
+    <section id="contacto-info" class="contacto-info">
+        <div class="horarios">
+            <h2>Horarios de Atención</h2>
+            <ul>
+                <li>Lunes - Viernes: 9:00 AM - 6:00 PM</li>
+                <li>Sábado: 10:00 AM - 4:00 PM</li>
+                <li>Domingo: Cerrado</li>
+            </ul>
+        </div>
+        <div id="telefono" class="telefono">
+            <h2>¿Prefieres llamarnos?</h2>
+            <a href="tel:+5491165692697" class="btn-telefono">Llamar Ahora</a>
+            <a href="https://wa.me/5491165692697" class="btn-telefono" target="_blank">Enviar mensaje</a>
+        </div>
+    </section>
+    
 
     <div id="chatContainer" class="chat-box">
         <div class="chat-header">
@@ -84,6 +101,7 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+
     <button id="openChat" class="chat-button">💬 Chat</button>
 
     <footer class="footer">
