--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="headerContent container">
             <div class="headerTxt">
-                <spa class="texto">Bienvenido a nuesta tienda online</spa>
+                <span class="texto">Bienvenido a nuesta tienda online</span>
                 <h1>Tenemos todo lo que estás buscando.</h1>
                 <p>
                     Vamos a encontrar todas las novedades, ofertas diarias, productos seleccionados, nuevos ingresos, y mucho mas.
