--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,7 +29,7 @@
 
         <div class="headerContent container">
             <div class="headerTxt">
-                <spa class="texto">Bienvenido a contactos</spa>
+                <span class="texto">Bienvenido a contactos</span>
                 <p>
                     Vas a encontrar: Nuestra ubicación, Whatsapp, e información sobre fechas especiales. 
                 </p>
